modified:   crossing.html JS modified on line 63 to avoid error in new character

--- a/crossing.html
+++ b/crossing.html
@@ -60,7 +60,7 @@ var enemies = [
   new GameCharacter (700, 50, width, width, "rgb(0, 0, 255)", 4),
 ];
 
-var player = new GameCharacter(50, 225, width, width, 'rgb(0, 255, 0)' 2);
+var player = new GameCharacter(200, 225, width, width, "rgb(0, 255, 0)", 2);
 var goal = new GameCharacter(screenWidth - width, 200, width, 100, "rgb(0, 0, 0)", 0);
 var sprites = {};
 
